test/typeerrors/ex21.golden
Building file ../test/typeerrors/ex21.act
  Compiling ex21.act for release

ERROR: Error when compiling ex21 module: Type error

Cannot satisfy the following simultaneous constraints for the unknown type t0:

  |
4 |   print(math.sin("hej"))
  |         ^^^^^^^^^^^^^^^
The type of the indicated expression (inferred to be __builtin__.str) must be a subclass of t0

  |
4 |   print(math.sin("hej"))
  |         ^^^^^^^^^^^^^^^
The type of the indicated expression (which we call t0) must be a subtype of _

  |
4 |   print(math.sin("hej"))
  |         ^^^^^^^^
math.sin has had its polymorphic type [A(math.RealFuns)] => (x: A) -> A instantiated to (x: t0) -> t0, so t0 must implement math.RealFuns

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

